--- a/jenkins/currency-exchange-microservice/Jenkinsfile
+++ b/jenkins/currency-exchange-microservice/Jenkinsfile
@@ -1,8 +1,34 @@
-node {
-	stage('Build') {
-		echo "Build"
+pipeline{
+	agent{
+		label "node"
 	}
-	stage('Test') {
-		echo "Test"
+	stages{
+		stage("Build"){
+			steps{
+				echo "========executing Build========"
+			}
+			post{
+				always{
+					echo "========inside Build always========"
+				}
+				success{
+					echo "========Build executed successfully========"
+				}
+				failure{
+					echo "========Build execution failed========"
+				}
+			}
+		}
+	}
+	post{
+		always{
+			echo "========always========"
+		}
+		success{
+			echo "========pipeline executed successfully ========"
+		}
+		failure{
+			echo "========pipeline execution failed========"
+		}
 	}
 }
